# Gama-Voz

./: .eslintignore  .gitignore  ARCHITECTURE-REVIEW-COMPLETE.md  ARQUITETURA_AUDIT.md  AUDITORIA_ACTION_ITEMS.md  AUDITORIA_COMPLETA_2026-02-24.md  AUDITORIA_EXECUTION_LOG.md  AUDITORIA_MASTER_PLAN.md  AUDITORIA_RESUMO_EXECUTIVO.txt  AUDITORIA_TÉCNICA_DETALHES.md  AUDITORIA_ÍNDICE.md  CLEANUP_AND_SETUP.md  CODE_QUALITY_REPORT.md  DB_SECURITY_AUDIT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOY_VALIDATION_REPORT.md  EXECUTION_SUMMARY_2026-02-24.md  FASE2_EXECUTION_PLAN.yaml  FIX_PROFILE_BUG.md  LEIA-ME-AUDITORIA.txt  MASTER_FINDINGS.md  PHASE3_KICKOFF.md  PIPELINE_SUMMARY.md  PRICING-NEON-FIX-REPORT.md  QA-01-SUMMARY.txt  QA_FINAL_SUMMARY.md  QA_INITIAL_REPORT.md  QA_MIGRATION_VALIDATION.md  QA_VALIDATION_CHECKLIST.md  README.md  REFACTORING_COMPLETE.txt  REFACTORING_INDEX.md  REFACTORING_SUMMARY.md  SESSION_STATE.md  SETUP_ADMIN.sh  SETUP_STEPS.md  SUPABASE_AUDIT_SUMMARY.md  SUPABASE_CHECKLIST.md  SUPABASE_DIAGNOSTIC_REPORT.md  (+34 more)
.ai/: ARCH-01-COMPLETION.md  DB-01-EXECUTION-SUMMARY.md  FINAL-PHASE-3-4-COMPLETION.md  MASTER-ORCHESTRATION-SUMMARY.md  PHASE-3-COMPLETION.md  (+11 more)
Desktop/O_GRANDE_PROJETO/GAMA_AUDIOTRANSCRIBER/: .gitignore  CLAUDE.md  LICENSE  README.md  devops-log-github-setup.md  pyproject.toml  setup.py
Desktop/O_GRANDE_PROJETO/GAMA_AUDIOTRANSCRIBER/docs/: API-REFERENCE.md  INSTALLATION.md
Desktop/O_GRANDE_PROJETO/GAMA_AUDIOTRANSCRIBER/src/: __init__.py  __main__.py  auditor_completo.py  cli.py  groq_client.py  transcriber.py  utils.py  web.py
(+1243 files in other folders)
